--- a/tools/rpfba/.shed.yml
+++ b/tools/rpfba/.shed.yml
@@ -1,6 +1,7 @@
 categories:
 - Synthetic Biology
 description: Perform FBA for the RetroPath2.0 heterologous pathways
+homepage_url: https://github.com/brsynth/rptools/blob/master/rptools/rpfba
 long_description: 'Perform FBA on a single or collection of SBML files containing
   heterologous pathways, as tar.xz archives. The package performs the following steps:
   1) it merges a user defined GEM SBML model to a given heterologous pathway. 2) it
@@ -8,13 +9,13 @@ long_description: 'Perform FBA on a single or collection of SBML files containin
   a user defined method that includes FBA, parsimonious FBA or fraction of optimum
   of another reaction. For the first two, the user must know the reaction name that
   the model will optimise to, while the latter the user must provide the target reaction
-  (default: ''rxn_target'') but also another reaction that will be restricted (default:
-  ''biomass''). The first step involves performing FBA using the source reaction as
-  the objective. Then the flux of that reaction has its upper and lower bounds set
-  to the same value, determined as a fraction of its FBA flux value. Thereafter the
-  objective is set to the initial target reaction and FBA is performed once again.
-  The tool uses the FBC package (https://co.mbine.org/specifications/sbml.level-3.version-1.fbc.version-2.release-1)
-  to manage the objective and flux bounds. Source code may be found at the following
-  location: https://github.com/brsynth/rptools/blob/master/rptools/rpfba/README.md'
+  (default: rxn_target) but also another reaction that will be restricted (default:
+  biomass). The first step involves performing FBA using the source reaction as the
+  objective. Then the flux of that reaction has its upper and lower bounds set to
+  the same value, determined as a fraction of its FBA flux value. Thereafter the objective
+  is set to the initial target reaction and FBA is performed once again. The tool
+  uses the FBC package (https://co.mbine.org/specifications/sbml.level-3.version-1.fbc.version-2.release-1)
+  to manage the objective and flux bounds.'
 name: rpfba
-owner: iuc
+owner: tduigou
+remote_repository_url: https://github.com/galaxyproject/tools-iuc/tree/master/tools/rpfba
