--- a/tools/spades/.shed.yml
+++ b/tools/spades/.shed.yml
@@ -8,9 +8,90 @@ categories:
 - "Assembly"
 - "RNA"
 - "Metagenomics"
-auto_tool_repositories:
-  name_template: "{{ tool_id }}"
-  description_template: "Wrapper for {{ tool_name }}"
+
+repositories:
+  spades:
+    description: Genome assembler for genomes of regular and single-cell projects.
+    long_description: |
+        SPAdes is a genome assembly algorithm which was designed for single cell and multi-cells bacterial data sets. Therefore, it might not be suitable for large genomes projects. SPAdes works with Ion Torrent, PacBio, Oxford Nanopore, and Illumina paired-end, mate-pairs and single reads.
+    include:
+      - test-data
+      - spades.xml
+      - macros.xml
+
+  spades_rnaviralspades:
+    description: De novo assembler for transcriptomes, metatranscriptomes and metaviromes.
+    long_description: |
+        rnaviralSPAdes is a pipeline specially designed for de novo assembler tailored for RNA viral datasets (transcriptome, metatranscriptome and metavirome).
+    include:
+      - test-data
+      - rnaviralspades.xml
+      - macros.xml
+
+  rnaspades:
+    description: De novo transcriptome assembler.
+    long_description: |
+        rnaSPAdes is a pipeline for de novo transcriptome assembly from RNA-Seq data and is suitable for all kinds of organisms.
+    include:
+      - test-data
+      - rnaspades.xml
+      - macros.xml
+
+  spades_plasmidspades:
+    description: Extract and assembly plasmids from WGS data.
+    long_description: |
+        plasmidSPAdes is a pipeline for assembling plasmid data sets. Ihas the potential to massively increase the throughput of plasmid sequencing and to provide information about plasmids in thousands of sequenced bacterial genomes by re-assembling their genomes, identifying their plasmids and supplementing the corresponding GenBank entries with the plasmid annotations
+    include:
+      - test-data
+      - plasmidspades.xml
+      - macros.xml
+
+  spades_metaviralspades:
+    description: Extract and assembly viral genomes from metagenomic data.
+    long_description: |
+        metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
+    include:
+      - test-data
+      - metaviralspades.xml
+      - macros.xml
+
+  metaspades:
+    description: A pipeline for metagenomic data sets.
+    long_description: |
+        metaSPAdes is a pipeline for assembling metagenomic data sets. metaSPAdes focuses on reconstructing a consensus backbone of a strain mixture, thus ignoring some strain-specific features corresponding to rare strains.
+    include:
+      - test-data
+      - metaspades.xml
+      - macros.xml
+
+  spades_metaplasmidspades:
+    description: Extract and assembly plasmids from metagenomic data.
+    long_description: |
+        metaplasmidSPAdes is a pipeline for assembling plasmids from metagenomic data sets.
+    include:
+      - test-data
+      - metaplasmidspades.xml
+      - macros.xml
+
+  spades_coronaspades:
+    description: SARS-CoV-2 de novo genome assembler.
+    long_description: |
+        Due to an increased interest in coronavirus research, a coronavirus assembly mode for SPAdes assembler has been developed (a.k.a coronaSPAdes).
+        It enables assembly of full-length coronaviridae genomes from the transcriptomic and metatranscriptomic data.
+    include:
+      - test-data
+      - coronaspades.xml
+      - macros.xml
+
+  spades_biosyntheticspades:
+    description: Biosynthetic gene cluster assembly.
+    long_description: |
+         biosyntheticSPAdes is a pipeline for biosynthetic gene cluster assembly.
+    include:
+      - test-data
+      - biosyntheticspades.xml
+      - macros.xml
+    
 suite:
   name: "suite_spades"
   description: "SPAdes - St. Petersburg genome assembler - is an assembly toolkit containing various assembly pipelines."
